syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/azusaanson/invest-api/proto/pb";

message User {
    string name = 1;
    string role = 2;
}

message LoginRequest {
    string name = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message CreateUserRequest {
    string name = 1;
    string password = 2;
    string role = 3;
}

message CreateUserResponse {
    User user = 1;
}
